# dstack

./: .dockerignore  .gitignore  .gitmodules  .mailmap  .mintlifyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PR.md  README.md  REUSE.toml  SECURITY.md  attestation.md  docs.json  package-lock.json  package.json  prek.toml  release-plz.toml  ruff.toml  run-tests.sh  rust-toolchain.toml
.agent/: WRITING_GUIDE.md
.github/ISSUE_TEMPLATE/: config.yml  security-question.yml
.github/scripts/: cargo-publish-idempotent.sh
.github/workflows/: docker-build-check.yml  foundry-test.yml  gateway-release.yml  js-sdk-release.yml  key-provider-release.yml  kms-release.yml  prek-check.yml  python-sdk-release.yml  rust-sdk-release.yml  rust.yml  sdk.yaml  simulator-release.yml  spdx-check.yml  tests.yml  verifier-release.yml  vmm-ui.yml
.mintlify-last/mint/: package.json
DIPs/: dip-1.md  dip-330.md
basefiles/: dstack-guest-agent.service  dstack-guest-agent.socket  dstack-prepare.sh  tappd.service  wg-checker.sh
basefiles/docker.service.d/: dstack-guest-agent.conf
cached-cell/: Cargo.toml
cached-cell/src/: lib.rs
cc-eventlog/: Cargo.toml
cc-eventlog/examples/: verify_ccel_device.rs
cc-eventlog/src/: codecs.rs  lib.rs  runtime_events.rs  tcg.rs  tdx.rs
cert-client/: Cargo.toml
cert-client/src/: lib.rs
certbot/: Cargo.toml
certbot/cli/: Cargo.toml
certbot/src/: acme_client.rs  bot.rs  dns01_client.rs  http_client.rs  lib.rs  workdir.rs
crates/dstack/: Cargo.toml
crates/dstack-auth/: Cargo.toml
crates/dstack-auth/src/: main.rs
crates/dstack-cli/: Cargo.toml
crates/dstack-cli-core/: Cargo.toml
crates/dstack-cli/src/: main.rs
crates/dstack-core/: Cargo.toml
crates/dstack-core/src/: compose.rs  config.rs  fsutil.rs  host.rs  lib.rs  ports.rs  vmm.rs
crates/dstack/src/: main.rs
crates/dstackup/: Cargo.toml
crates/dstackup/src/: cid.rs  cli.rs  destroy.rs  image.rs  install.rs  main.rs  state.rs  systemd.rs
ct_monitor/: Cargo.toml
ct_monitor/src/: main.rs
deploy/gcp/: README.md  deploy.sh  test.sh
docs/: agents.md  amd-sev-snp-review-readiness.md  auth-simple-operations.md  bridge-networking.md  case-studies.mdx  community.mdx  confidential-ai.md  cvm-boundaries.md  deployment.md  design-and-hardening-decisions.md  docs.json  dstack-gateway.md  encrypted-env-spec.md  guest-image-tools.md  hardware-enablement.md  index.mdx  inference.md  introduction.mdx  mint.json  native-tee-interfaces.md  onboarding-redesign.md  onboarding.md  onchain-governance.md  quickstart.md  quickstart.mdx  security-model.md  security.md  training.md  troubleshooting.mdx  usage.md  vmm-cli-user-guide.md
docs/api-reference/: authentication.mdx  overview.mdx
docs/community-section/: community.mdx  contribution.mdx
docs/concepts/: architecture.mdx  basic-components.mdx  core-components.mdx  core-gateway.mdx  core-glossary.mdx  core-guest-agent.mdx  core-kms.mdx  core-os.mdx  core-tdxctl.mdx  core-vmm.mdx  networking.mdx  overview.mdx  security-model.mdx
docs/getting-started/: start.mdx  (+9 more)
dstack-attest/: Cargo.toml
dstack-mr/: Cargo.toml
dstack-types/: Cargo.toml
dstack-types/src/: lib.rs  mr_config.rs  shared_filenames.rs  version.rs
dstack-util/: Cargo.toml
gateway/: Cargo.toml  gateway.toml
guest-agent/: Cargo.toml  dstack.toml
guest-agent-simulator/: Cargo.toml  dstack-simulator.service  dstack.toml
guest-api/: build.rs
host-api/: build.rs
key-provider-build/: Dockerfile  Dockerfile.key-provider  docker-compose.yaml  dstack-key-provider.service  entrypoint.sh
key-provider-client/: Cargo.toml
kms/: Cargo.toml  README.md  kms.toml
kms/e2e/: Cargo.toml  kms-test.toml.template  run-e2e.sh
kms/e2e/src/: main.rs
mod-tdx-guest/: mod.c
no_std_check/: Cargo.toml
nsm-qvl/: Cargo.toml
on-prem/: .env.authority.example  .gitignore  PROTOCOL.md  PROTOCOL_CN.md  README.md  docker-compose.authority.yml
on-prem-lite/: .env.authority.example  .gitignore  DEPLOYMENT.md  DESIGN.md  README.md  docker-compose.authority.yml
on-prem-lite/launcher/: Cargo.toml  Dockerfile
on-prem-lite/launcher/src/: cloud.rs  config.rs  courier.rs  crypto.rs  errors.rs  license.rs  main.rs  runner.rs  state.rs
on-prem/key-broker/: Cargo.toml  Dockerfile
on-prem/key-broker/src/: auth.rs  cek.rs  config.rs  courier.rs  crypto.rs  errors.rs  keyset.rs  lease.rs  main.rs  receipt.rs  slot.rs  state.rs
on-prem/launcher/: Cargo.toml  Dockerfile
on-prem/launcher/src/: cloud.rs  config.rs  gua.rs  key_broker.rs  kms.rs  main.rs  runner.rs  status.rs
port-forward/: Cargo.toml
port-forward/src/: lib.rs  tcp.rs  udp.rs
ra-rpc/: Cargo.toml
ra-tls/: Cargo.toml
scripts/: add-spdx-attribution.py  config-fw.sh  dstack-backup.py  install.sh  setup-bridge.sh
sdk/: README.md  run-tests.sh
sdk/python/: Makefile  README.md  mypy.ini  pyproject.toml  test_outputs.py
sdk/python/examples/: ZETACHAIN_README.md  zetachain_demo.py
sdk/python/src/dstack_sdk/: __init__.py  dstack_client.py  dstack_client.pyi  encrypt_env_vars.py  ethereum.py  get_compose_hash.py  solana.py  verify_env_encrypt_public_key.py  zetachain.py
sdk/python/tests/: test_client.py  test_encrypt_env_vars.py  test_ethereum.py  test_get_compose_hash.py  test_mypy_check.py  test_solana.py  test_typing.py  test_verify_env_encrypt_public_key.py  test_zetachain.py
sdk/rust/types/: CHANGELOG.md  Cargo.toml
sdk/rust/types/src/: dstack.rs  lib.rs  tappd.rs
sdk/rust/types/tests/: no_std_test.rs
serde-duration/: Cargo.toml
sev-snp-attest/: Cargo.toml
sev-snp-attest/src/: lib.rs
sev-snp-qvl/: Cargo.toml
sev-snp-qvl/src/: lib.rs
sodiumbox/: Cargo.toml
supervisor/: Cargo.toml
tappd/: tappd.toml
tdx-attest/: Cargo.toml
tdx-attest-sys/: build.rs
teepod/: teepod.toml
test-scripts/: snp-e2e-smoke.sh
tpm-qvl/: Cargo.toml
tproxy/: Cargo.toml  tproxy.toml
uds2vsock/: Cargo.toml
uds2vsock/src/: main.rs
uds2yamux/: Cargo.toml
uds2yamux/src/: main.rs
verifier/: Cargo.toml  README.md  dstack-verifier.toml  test.sh
vmm/: Cargo.toml  requirements.txt  vmm.toml
(+1396 files in other folders)
