# SPDX-FileCopyrightText: © 2024-2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "uds2vsock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-vsock.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
quinn.workspace = true
socket2 = { version = "0.5", features = ["all"] }
yamux.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
