# SPDX-FileCopyrightText: © 2026 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dstack-auth"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rocket = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
