# SPDX-FileCopyrightText: © 2026 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# the package is dstack-cli (clear it's a CLI, not the dstack project), but the
# binary stays `dstack`.
[[bin]]
name = "dstack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dstack-cli-core.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
