# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
http-client = { workspace = true, features = ["prpc"] }
dstack-vmm-rpc.workspace = true
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true
