# SPDX-FileCopyrightText: © 2025 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstack"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dstack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dstack-core.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
