# SPDX-FileCopyrightText: © 2026 Phala Network <dstack@phala.network>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dstackup"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dstackup"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dstack-cli-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
